[tool.poetry]
name = "tradehub"
version = "0.0.0"
description = "Trading platform"
authors = ["asuiah <liweilong@sea.com>"]
maintainers=["asuiah <liweilong@sea.com>"]
repository = "https://github.com/asuiah/tradehub"
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12.0"
broker = { path = "./libs/broker",  develop = false}
#strategies = { path = "libs/strategies" }
pre-commit = "^3.8.0"
numpy = "^1.26.4"
# matplotlib = "^3.9.2"
# pyfolio = "^0.9.2"
# statsmodels = "0.14.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.mypy]
python_version = "^3.12.0"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
check_untyped_defs = true
exclude = "venv/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
