[tool.poetry]
name = "broker"
version = "0.0.0"
description = "Trading broker"
authors = ["asuiah <liweilong@sea.com>"]
maintainers=["asuiah <liweilong@sea.com>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12.0"
yfinance = "^0.2.40"
pandas = "^2.2.2"
moomoo-api = "^8.5.4508"
pre-commit = "^3.8.0"
numpy = "^1.26.4"


